[gd_scene load_steps=13 format=3 uid="uid://csg76gecdap8d"]

[ext_resource type="Script" path="res://Ball/punching_bag.gd" id="1_2wssg"]
[ext_resource type="Texture2D" uid="uid://ccx2bokxbuhrq" path="res://Ball/assets/box-ball.webp" id="1_svcgm"]
[ext_resource type="PackedScene" uid="uid://b50g3xepx533k" path="res://Ball/bounce_particles.tscn" id="2_gqb3x"]
[ext_resource type="Script" path="res://Player/StateMachine.gd" id="4_3g6dx"]
[ext_resource type="Script" path="res://Ball/Idle.gd" id="5_2b6ar"]
[ext_resource type="Script" path="res://Ball/Damage.gd" id="6_a17ue"]
[ext_resource type="Script" path="res://Ball/Die.gd" id="7_kcfl3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_66h1j"]
radius = 23.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fpkqq"]
radius = 23.0
height = 160.0

[sub_resource type="Animation" id="Animation_3p23d"]
resource_name = "Damage"
length = 0.15
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0288652, 0.0758361, 0.136709),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0288416, 0.0782789, 0.138719),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, 12), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0114172, 0.0443294, 0.091187, 0.140596),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.745098, 0.054902, 0, 1), Color(1, 0.521569, 0, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BounceParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0292575, 0.103851),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_mypar"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BounceParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fonqp"]
_data = {
"Damage": SubResource("Animation_3p23d"),
"RESET": SubResource("Animation_mypar")
}

[node name="PunchingBag" type="CharacterBody2D"]
position = Vector2(1, 0)
collision_layer = 8
collision_mask = 7
script = ExtResource("1_2wssg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_svcgm")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(26, 138)
shape = SubResource("CircleShape2D_66h1j")

[node name="BeatArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeatArea"]
position = Vector2(27, 79)
shape = SubResource("CapsuleShape2D_fpkqq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fonqp")
}

[node name="BounceParticles" parent="." instance=ExtResource("2_gqb3x")]
position = Vector2(28, 74)

[node name="Label" type="Label" parent="."]
self_modulate = Color(0.2, 0.2, 0.2, 1)
offset_left = 1.0
offset_top = 18.0
offset_right = 41.0
offset_bottom = 44.0
text = "# #"

[node name="Label2" type="Label" parent="."]
self_modulate = Color(0.2, 0.2, 0.2, 1)
offset_left = 9.0
offset_top = 58.0
offset_right = 49.0
offset_bottom = 84.0
text = "  #  #"

[node name="Label3" type="Label" parent="."]
self_modulate = Color(0.2, 0.2, 0.2, 1)
offset_left = 9.0
offset_top = 106.0
offset_right = 49.0
offset_bottom = 132.0
text = "# #"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_3g6dx")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_2b6ar")
_animation_player = NodePath("../../AnimationPlayer")

[node name="Damage" type="Node" parent="StateMachine"]
script = ExtResource("6_a17ue")
_animation_player = NodePath("../../AnimationPlayer")

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource("7_kcfl3")

[connection signal="area_entered" from="BeatArea" to="." method="_on_beat_area_area_entered"]
[connection signal="body_entered" from="BeatArea" to="." method="_on_beat_area_body_entered"]
